--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <script src="./script.js" defer></script>
 
 <body>
-
+  <div class="calc-body">
+    <div class="display-area"></div>
+    <div class="keypad">
+      <div class="keypad-row-1"></div>
+      <div class="keypad-row-2"></div>
+      <div class="keypad-row-3"></div>
+      <div class="keypad-row-4"></div>
+      <div class="keypad-row-5"></div>
+    </div>
+  </div>
 </body>
 
 </html>
