--- a/index.html
+++ b/index.html
@@ -12,11 +12,35 @@
   <div class="calc-body">
     <div class="display-area"></div>
     <div class="keypad">
-      <div class="keypad-row-1"></div>
-      <div class="keypad-row-2"></div>
-      <div class="keypad-row-3"></div>
-      <div class="keypad-row-4"></div>
-      <div class="keypad-row-5"></div>
+      <div class="keypad-row-1">
+        <button>AC</button>
+        <button>+/-</button>
+        <button>%</button>
+        <button>/</button>
+      </div>
+      <div class="keypad-row-2">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+      </div>
+      <div class="keypad-row-3">
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+      </div>
+      <div class="keypad-row-4">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+      </div>
+      <div class="keypad-row-5">
+        <button>0</button>
+        <button>.</button>
+        <button>=</button>
+      </div>
     </div>
   </div>
 </body>
