--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <button>AC</button>
         <button>+/-</button>
         <button>%</button>
-        <button>/</button>
+        <button class="binary-operator">/</button>
       </div>
       <div class="keypad-row-2">
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button>*</button>
+        <button class="binary-operator">*</button>
       </div>
       <div class="keypad-row-3">
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button>-</button>
+        <button class="binary-operator">-</button>
       </div>
       <div class="keypad-row-4">
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button>+</button>
+        <button class="binary-operator">+</button>
       </div>
       <div class="keypad-row-5">
         <button class="number">0</button>
