--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="keypad-row-5">
         <button class="number">0</button>
         <button>.</button>
-        <button>=</button>
+        <button class="eql-btn">=</button>
       </div>
     </div>
   </div>
