Reference leftover buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="display-area"></div>
     <div class="keypad">
       <div class="keypad-row-1">
-        <button>AC</button>
-        <button>+/-</button>
-        <button>%</button>
+        <button class="clr-btn">AC</button>
+        <button class="sign-reverse-btn">+/-</button>
+        <button class="percent-btn">%</button>
         <button class="binary-operator">/</button>
       </div>
       <div class="keypad-row-2">
@@ -38,7 +38,7 @@
       </div>
       <div class="keypad-row-5">
         <button class="number">0</button>
-        <button>.</button>
+        <button class="decimal-btn">.</button>
         <button class="eql-btn">=</button>
       </div>
     </div>
