Add decimal and limit length of input and output
Dealt with several edge cases around addition of
multiple decimal points, limiting length of input
and output to 9 digits (excluding 1 sign digit)
under various circumstances.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="calc-body">
-    <div class="display-area"></div>
+    <div class="display-area">0</div>
     <div class="keypad">
       <div class="keypad-row-1">
         <button class="clr-btn">AC</button>
