Add DEL button and associated functionality

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <div class="keypad-row-5">
         <button class="number">0</button>
         <button class="decimal-btn">.</button>
+        <button class="del-btn">DEL</button>
         <button class="eql-btn">=</button>
       </div>
     </div>
