Add heading and footer

--- a/index.html
+++ b/index.html
@@ -5,45 +5,55 @@
   <meta charset="utf-8">
   <title>Calculator</title>
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./style.css">
 <script src="./script.js" defer></script>
 
 <body>
-  <div class="calc-body">
-    <div class="display-area">0</div>
-    <div class="keypad">
-      <div class="keypad-row-1">
-        <button class="clr-btn">AC</button>
-        <button class="sign-reverse-btn">+/-</button>
-        <button class="percent-btn">%</button>
-        <button class="binary-operator">/</button>
-      </div>
-      <div class="keypad-row-2">
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="binary-operator">*</button>
-      </div>
-      <div class="keypad-row-3">
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="binary-operator">-</button>
-      </div>
-      <div class="keypad-row-4">
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="binary-operator">+</button>
-      </div>
-      <div class="keypad-row-5">
-        <button class="number">0</button>
-        <button class="decimal-btn">.</button>
-        <button class="del-btn">DEL</button>
-        <button class="eql-btn">=</button>
+  <div class="heading">
+    <div>ETCH</div>
+    <div>A</div>
+    <div>SKETCH</div>
+  </div>
+  <div class="calc-container">
+    <div class="calc-body">
+      <div class="display-area">0</div>
+      <div class="keypad">
+        <div class="keypad-row-1">
+          <button class="clr-btn">AC</button>
+          <button class="sign-reverse-btn">+/-</button>
+          <button class="percent-btn">%</button>
+          <button class="binary-operator">/</button>
+        </div>
+        <div class="keypad-row-2">
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="binary-operator">*</button>
+        </div>
+        <div class="keypad-row-3">
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="binary-operator">-</button>
+        </div>
+        <div class="keypad-row-4">
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="binary-operator">+</button>
+        </div>
+        <div class="keypad-row-5">
+          <button class="number">0</button>
+          <button class="decimal-btn">.</button>
+          <button class="del-btn">DEL</button>
+          <button class="eql-btn">=</button>
+        </div>
       </div>
     </div>
   </div>
+  <div class="footer">Copyright © 2024 ashish-mittal2047 <a href="https://github.com/ashish-mittal2047"><i
+        class="fa fa-github"></i></a></div>
 </body>
 
 </html>
