Add final styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <body>
   <div class="heading">
-    <div>ETCH</div>
-    <div>A</div>
-    <div>SKETCH</div>
+    CALCULATOR
   </div>
   <div class="calc-container">
     <div class="calc-body">
